Fix horizontal scrollbar

--- a/views/scss/inc/_navigator.scss
+++ b/views/scss/inc/_navigator.scss
@@ -241,7 +241,7 @@
                         min-width: 10rem;
                     }
                     &.qti-navigator-icon {
-                        min-width: 2rem;
+                        min-width: 1.5rem;
                     }
                     &.qti-navigator-counter {
                         min-width: 5rem;
